--- a/homework/2hw_resume_with_css/style.css
+++ b/homework/2hw_resume_with_css/style.css
@@ -19,18 +19,14 @@ body {
   background: url("./source/back2.jpg") center/cover no-repeat fixed;
   margin: 0;
   border: 5px solid #4a0088;
-  color: #e6d4ff;
-  font: normal 400 14px/1.6 'ofont-family', sans-serif;
+  color: white;
+  font: normal 400 16px/1.6 'ofont-family', sans-serif;
 
-}
-
-img {
-  object-fit: cover;
 }
 
 
 strong {
-  color: #fef9e7;
+  color: #FFDB51;
 }
 
 #main_icon {
@@ -99,12 +95,14 @@ p {
   border-radius: 15px;
   border: 2px solid #c177ff;
   min-width: 10%;
+  transition: padding 0.6s ease;
 
 }
 
-.icon {
+.icons {
   display: flex;
   justify-content: center;
+  gap: 300px;
 }
 
 li {
@@ -113,7 +111,7 @@ li {
 
 /* Анимации */
 .card:hover {
-  background-color: chocolate;
+  background-color: rgba(255, 255, 255, 0.01);
   color: #000;
   transition: background-color 200ms;
 
@@ -126,12 +124,4 @@ li {
 
 .elements>div:hover {
   padding: 25px;
-  margin: 5px;
-}
-
-section:target {
-  background-color: rgba(139, 0, 255, 0.3);
-  transition: background-color 0.5s ease;
-  border-radius: 10px;
-  padding: 10px;
 }
